--- a/hamburgerExample/styles.css
+++ b/hamburgerExample/styles.css
@@ -68,15 +68,15 @@ body {
 }
 
 .hamburger-menu:has(input:checked)::before {
-  rotate: 45deg;
+  rotate: 135deg;
   width: var(--x-width);
-  translate: 0 calc(var(--bar-height) / -2);
+  translate: var(--x-width) calc(var(--bar-height) / -2);
 }
 
 .hamburger-menu:has(input:checked)::after {
-  rotate: -45deg;
+  rotate: -135deg;
   width: var(--x-width);
-  translate: 0 calc(var(--bar-height) / 2);
+  translate: var(--x-width) calc(var(--bar-height) / 2);
 }
 
 .hamburger-menu input:checked {
